Add download link

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       </div>
     </header>
     <!-- Hero Section -->
-    <header class="hero" id="download">
+    <header class="hero">
       <div class="container">
         <!-- <h1 class="logo">Queditor</h1>
         <p class="tagline">A professional Android-focused code editor.</p> -->
         <div class="cta">
           <a
-            href="https://github.com/devsQUE/Queditor/releases"
+            href="#download"
             class="btn primary"
             ><i class="fa-solid fa-download"></i>
             <h3>Download Now</h3>
@@ -200,6 +200,48 @@
       <div id="caption"></div>
     </div>
 
+    <!-- Download Section -->
+<section class="download" id="download">
+  <div class="container dl-wrap">
+    <div class="dl-head">
+      <h2>Get Queditor</h2>
+      <p>Choose your store to download the app</p>
+    </div>
+
+    <div class="dl-grid">
+      <!-- Indus Appstore -->
+      <a class="store-card" id="store-indus"
+         href="https://www.indusappstore.com/apps/tools/queditor/com.devsque.queditor?page=details&id=com.devsque.queditor" target="_blank" rel="noopener">
+          <img src="assets/images/badges/indus.png" alt="Get it on Indus Appstore" />
+          <span class="tag">Available now</span>
+      </a>
+
+      <!-- Google Play -->
+      <a class="store-card disabled" id="store-google"
+         href="https://play.google.com/store/apps/details?id=com.your.app" target="_blank" rel="noopener">
+          <img src="assets/images/badges/play.svg" alt="Get it on Google Play" />
+          <span class="tag">Coming soon</span>
+      </a>
+
+      <!-- App Store -->
+      <a class="store-card disabled" id="store-apple"
+         href="https://apps.apple.com/app/idXXXXXXXXX" target="_blank" rel="noopener" aria-disabled="true">
+          <img src="assets/images/badges/appstore.svg" alt="Download on the App Store" />
+        <span class="tag">Coming soon</span>
+      </a>
+
+
+    </div>
+
+    <!-- Optional: small QR area -->
+    <div class="dl-qr">
+      <img src="assets/images/qr/indus.png" alt="QR for Google Play" id="qr-img">
+      <p id="qr-caption">Scan to open on your device</p>
+    </div>
+  </div>
+</section>
+
+
     <!-- Footer -->
     <footer class="footer">
       <div class="container footer-content">
@@ -270,6 +312,46 @@
         }
       };
     </script>
+    <script>
+  // highlight card based on platform
+  (function () {
+    const ua = navigator.userAgent.toLowerCase();
+    const google = document.getElementById('store-google');
+    const apple  = document.getElementById('store-apple');
+    const indus  = document.getElementById('store-indus');
+    const cards = [google, apple, indus];
+
+    function hi(card) {
+      cards.forEach(c => c && c.classList.remove('hi'));
+      if (card) {
+        card.style.outline = '2px solid #0d6efd';
+        card.style.outlineOffset = '3px';
+        setTimeout(()=>{ card.style.outline=''; card.style.outlineOffset=''; }, 1800);
+      }
+    }
+
+    if (/iphone|ipad|ipod|macintosh.*arm/.test(ua)) hi(apple);
+    else if (/android/.test(ua)) hi(google);
+    else hi(indus); // desktop default
+
+    // Optional: swap QR based on highlight
+    const qr = document.getElementById('qr-img');
+    const caption = document.getElementById('qr-caption');
+    function setQR(src, text) {
+      if (!qr) return;
+      qr.src = src;
+      if (caption) caption.textContent = text;
+    }
+    if (/iphone|ipad|ipod|macintosh.*arm/.test(ua)) {
+      setQR('assets/images/qr/appstore.png', 'Scan to open on App Store');
+    } else if (/android/.test(ua)) {
+      setQR('assets/images/qr/play.png', 'Scan to open on Google Play');
+    } else {
+      setQR('assets/images/qr/indus.png', 'Scan to open on Indus Appstore');
+    }
+  })();
+</script>
+
   </body>
 </html>
 
