--- a/index.html
+++ b/index.html
@@ -216,16 +216,23 @@
           <span class="tag">Available now</span>
       </a>
 
+      <!-- Github -->
+      <a class="store-card" id="store-github"
+         href="https://github.com/devsQUE/Queditor/releases" target="_blank" rel="noopener" aria-disabled="true">
+          <img src="assets/images/badges/github.svg" alt="Available on Github" />
+        <span class="tag">Available Now</span>
+      </a>
+
       <!-- Google Play -->
       <a class="store-card disabled" id="store-google"
-         href="https://play.google.com/store/apps/details?id=com.your.app" target="_blank" rel="noopener">
+         href="#" target="_blank" rel="noopener">
           <img src="assets/images/badges/play.svg" alt="Get it on Google Play" />
           <span class="tag">Coming soon</span>
       </a>
 
       <!-- App Store -->
       <a class="store-card disabled" id="store-apple"
-         href="https://apps.apple.com/app/idXXXXXXXXX" target="_blank" rel="noopener" aria-disabled="true">
+         href="#" target="_blank" rel="noopener" aria-disabled="true">
           <img src="assets/images/badges/appstore.svg" alt="Download on the App Store" />
         <span class="tag">Coming soon</span>
       </a>
