--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
     <title>Queditor – Android Code Editor</title>
     <meta
       name="description"
       content="Queditor is a professional Android-focused code editor with projects, ZIP import/export, file management, preview, offline support and more."
     />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libertinus+Sans:wght@400;700&family=Luckiest+Guy&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libertinus+Sans:wght@400;700&family=Luckiest+Guy&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" href="assets/images/logo.png" />
     <meta property="og:title" content="Queditor – Android Code Editor" />
     <meta name="theme-color" content="#282A36" />
@@ -47,9 +53,7 @@
         <!-- <h1 class="logo">Queditor</h1>
         <p class="tagline">A professional Android-focused code editor.</p> -->
         <div class="cta">
-          <a
-            href="#download"
-            class="btn primary"
+          <a href="#download" class="btn primary"
             ><i class="fa-solid fa-download"></i>
             <h3>Download Now</h3>
           </a>
@@ -201,45 +205,108 @@
     </div>
 
     <!-- Download Section -->
-<section class="download" id="download">
-  <div class="container dl-wrap">
-    <div class="dl-head">
-      <h2>Get Queditor</h2>
-      <p>Choose your store to download the app</p>
-    </div>
+    <section class="download" id="download">
+      <div class="container dl-wrap">
+        <div class="dl-head">
+          <h2>Get Queditor</h2>
+          <p>Choose your store to download the app</p>
+        </div>
 
-    <div class="dl-grid">
-      <!-- Indus Appstore -->
-      <a class="store-card" id="store-indus"
-         href="https://www.indusappstore.com/apps/tools/queditor/com.devsque.queditor?page=details&id=com.devsque.queditor" target="_blank" rel="noopener">
-          <img src="assets/images/badges/indus.png" alt="Get it on Indus Appstore" />
-          <span class="tag">Available now</span>
-      </a>
+        <div class="dl-grid">
+          <!-- Indus Appstore -->
+          <a
+            class="store-card"
+            id="store-indus"
+            href="https://www.indusappstore.com/apps/tools/queditor/com.devsque.queditor?page=details&id=com.devsque.queditor"
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              src="assets/images/badges/indus.png"
+              alt="Get it on Indus Appstore"
+            />
+            <span class="tag">Available now</span>
+          </a>
 
-      <!-- Github -->
-      <a class="store-card" id="store-github"
-         href="https://github.com/devsQUE/Queditor/releases" target="_blank" rel="noopener" aria-disabled="true">
-          <img src="assets/images/badges/github.svg" alt="Available on Github" />
-        <span class="tag">Available Now</span>
-      </a>
+          <!-- Github -->
+          <a
+            class="store-card"
+            id="store-github"
+            href="https://github.com/devsQUE/Queditor/releases"
+            target="_blank"
+            rel="noopener"
+            aria-disabled="true"
+          >
+            <img
+              src="assets/images/badges/github.svg"
+              alt="Available on Github"
+            />
+            <span class="tag">Available Now</span>
+          </a>
 
-      <!-- Google Play -->
-      <a class="store-card disabled" id="store-google"
-         href="#" target="_blank" rel="noopener">
-          <img src="assets/images/badges/play.svg" alt="Get it on Google Play" />
-          <span class="tag">Coming soon</span>
-      </a>
+          <!-- Amazon Appstore -->
+          <a
+            class="store-card disabled"
+            id="store-amazon"
+            href="#"
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              src="assets/images/badges/amazon.svg"
+              alt="Available at Amazon Appstore"
+            />
+            <span class="tag">Coming soon</span>
+          </a>
 
-      <!-- App Store -->
-      <a class="store-card disabled" id="store-apple"
-         href="#" target="_blank" rel="noopener" aria-disabled="true">
-          <img src="assets/images/badges/appstore.svg" alt="Download on the App Store" />
-        <span class="tag">Coming soon</span>
-      </a>
-    </div>
-  </div>
-</section>
+          <!-- F-Droid -->
+          <a
+            class="store-card disabled"
+            id="store-fdroid"
+            href="#"
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              src="assets/images/badges/fdroid.svg"
+              alt="Get it on F-Droid"
+            />
+            <span class="tag">Coming soon</span>
+          </a>
 
+          <!-- Google Play -->
+          <a
+            class="store-card disabled"
+            id="store-google"
+            href="#"
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              src="assets/images/badges/play.svg"
+              alt="Get it on Google Play"
+            />
+            <span class="tag">Coming soon</span>
+          </a>
+
+          <!-- App Store -->
+          <a
+            class="store-card disabled"
+            id="store-apple"
+            href="#"
+            target="_blank"
+            rel="noopener"
+            aria-disabled="true"
+          >
+            <img
+              src="assets/images/badges/appstore.svg"
+              alt="Download on the App Store"
+            />
+            <span class="tag">Coming soon</span>
+          </a>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
@@ -258,9 +325,7 @@
         </div>
 
         <div class="footer-links">
-          <a href="legal.html#license"
-            >© <span id="year"></span> devsQUE /</a
-          >
+          <a href="legal.html#license">© <span id="year"></span> devsQUE /</a>
           <a href="legal.html#privacy">Privacy Policy /</a>
           <a href="legal.html#terms">Terms & Conditions /</a>
           <a href="legal.html#disclaimer">Disclaimer /</a>
@@ -284,6 +349,7 @@
         navLinks.classList.toggle("active");
       });
     </script>
+    
     <script>
       const modal = document.getElementById("imgModal");
       const modalImg = document.getElementById("modalImage");
@@ -313,4 +379,3 @@
     </script>
   </body>
 </html>
-
